# servant-api-wrapper

./: .gitignore  TAGS  api-wrapper.cabal  stack.yaml
app/: Main.hs
assets/: index.html
src/: Api.hs  Client.hs  Config.hs  Models.hs  Server.hs  Types.hs
src/Api/Client/: Occupancy.hs
src/Api/Server/: Occupancy.hs
